--- a/ui/sa_main.ui
+++ b/ui/sa_main.ui
@@ -32,7 +32,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget {
-	background-color: #282a36;
+	background-color: #000000;
 }</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -53,13 +53,13 @@
      <property name="minimumSize">
       <size>
        <width>1070</width>
-       <height>160</height>
+       <height>100</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>160</height>
+       <height>100</height>
       </size>
      </property>
      <property name="frameShape">
@@ -72,24 +72,27 @@
       <property name="topMargin">
        <number>0</number>
       </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
       <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
        <widget class="QFrame" name="frame_logo">
         <property name="minimumSize">
          <size>
           <width>484</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>484</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="baseSize">
          <size>
           <width>484</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="frameShape">
@@ -99,27 +102,36 @@
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
          <property name="topMargin">
           <number>0</number>
          </property>
-         <item row="0" column="0">
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <property name="verticalSpacing">
+          <number>6</number>
+         </property>
+         <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignVCenter">
           <widget class="QLabel" name="label_signalproLogo">
            <property name="minimumSize">
             <size>
-             <width>450</width>
-             <height>150</height>
+             <width>300</width>
+             <height>100</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>450</width>
-             <height>150</height>
+             <width>300</width>
+             <height>100</height>
             </size>
            </property>
            <property name="baseSize">
             <size>
-             <width>450</width>
-             <height>150</height>
+             <width>300</width>
+             <height>100</height>
             </size>
            </property>
            <property name="text">
@@ -130,9 +142,6 @@
            </property>
            <property name="scaledContents">
             <bool>true</bool>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
@@ -152,6 +161,75 @@
         </property>
        </spacer>
       </item>
+      <item>
+       <widget class="QLineEdit" name="lineEdit_setFrequency">
+        <property name="minimumSize">
+         <size>
+          <width>250</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>250</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Orbitron</family>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QLineEdit{
+	background-color: #ffffff;
+	border-radius: 12px;
+	padding: 8px;
+}</string>
+        </property>
+        <property name="placeholderText">
+         <string>Input frequency...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_frequencyText">
+        <property name="minimumSize">
+         <size>
+          <width>250</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>250</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Orbitron</family>
+          <pointsize>12</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QLabel{
+	color: #ffffff;
+	border-radius: 12px;
+	padding: 8px;
+}</string>
+        </property>
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -162,6 +240,12 @@
        <width>1062</width>
        <height>480</height>
       </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit, QTextEdit, QPushButton, QLabel, QWidget {
+    color: #ffffff;
+    background-color: #000000;
+}</string>
      </property>
     </widget>
    </item>
